manifests/app/dreamkast/overlays/development/dk-584/deployment-dreamkast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
  name: dreamkast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dreamkast
    spec:
      containers:
      - name: dreamkast
        image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ecs:main
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "bin/rails db:migrate && bin/rails db:seed"]
        ports:
          - containerPort: 3000
            resources:
        livenessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
  name: dreamkast-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast
      tier: dreamkast-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast-ui
    spec:
      containers:
      - image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ui:main
        imagePullPolicy: Always
        name: dreamkast-ui
        ports:
        - containerPort: 3001
        livenessProbe:
          httpGet:
            port: 3001
            path: /cndo2021/ui/
          failureThreshold: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 3001
            path: /cndo2021/ui/
          failureThreshold: 5
          periodSeconds: 5
        startupProbe:
          httpGet:
            port: 3001
            path: /cndo2021/ui/
          failureThreshold: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
---
